syntax = "proto3";

package domain.transactional_outbox.v1;

option go_package = "github.com/shortlink-org/shortlink/pkg/pattern/transactional_outbox/domain/transactional_outbox/v1";

import "google/protobuf/timestamp.proto";

// Status represents the status of a message in the outbox.
enum Status {
  // Unspecified status.
  STATUS_UNSPECIFIED = 0;

  // The message is pending.
  STATUS_PENDING = 1;

  // The message has been processed.
  STATUS_PROCESSED = 2;

  // The message has failed.
  STATUS_FAILED = 3;
}

// OutboxMessage represents a message in the outbox.
message OutboxMessage {
  // The unique identifier of the message.
  bytes id = 1;

  // The type of the message.
  string type = 2;

  // The payload of the message.
  bytes payload = 3;

  // The status of the message.
  Status status = 4;

  // The timestamp when the message was created.
  google.protobuf.Timestamp created_at = 5;

  // The number of times the message has been retried.
  int32 retry_count = 6;
}

// Outbox represents the transactional outbox.
message Outbox {
  // The list of messages in the outbox.
  repeated OutboxMessage messages = 1;
}
